Implement accordion functionality with multiple cards and toggle feature

--- a/index.html
+++ b/index.html
@@ -13,21 +13,81 @@
 <body>
 
     <header>
-        <h1 class="text-center my-4">Bootstrap Accordion Example</h1>
+        <h1 class="text-center my-4">Accordion Example</h1>
     </header>
 
     <div class="container">
 
-        <div class="card mb-3">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div id="cards">
+
+            <div class="card" id="card1">
+                <div class="card-body">
+                    <div class="card-title">
+                        <span>Card 1</span>
+                        <span>⬇️</span>
+                    </div>
+
+                    <div id="card1-content" class="card-body card">
+                        Card 1 content
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" id="card2">
+                <div class="card-body">
+                    <div class="card-title">
+                        <span>Card 2</span>
+                        <span>⬇️</span>
+                    </div>
+
+                    <div id="card2-content" class="card-body card">
+                        Card 2 content
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" id="card3">
+                <div class="card-body">
+                    <div class="card-title">
+                        <span>Card 3</span>
+                        <span>⬇️</span>
+                    </div>
+
+                    <div id="card3-content" class="card-body card">
+                        Card 3 content
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" id="card4">
+                <div class="card-body">
+                    <div class="card-title">
+                        <span>Card 4</span>
+                        <span>⬇️</span>
+                    </div>
+
+                    <div id="card4-content" class="card-body card">
+                        Card 4 content
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" id="card5">
+                <div class="card-body">
+                    <div class="card-title">
+                        <span>Card 5</span>
+                        <span>⬇️</span>
+                    </div>
+
+                    <div id="card5-content" class="card-body card">
+                        Card 5 content
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
